--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "About Joel E Carlson"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fpdf>=1.7.2",
     "markdown>=3.10.1",
     "ruff>=0.14.14",
 ]
